tests/error/ptr_static_outside2.gw
#! [contains] can only be used at class scope
funcdef static void Test(int i);
